# Snapdragon2025_SceneWeaver

./: EFFECTS_GUIDE.md  ENVIRONMENT_STATUS.md  LOCAL_MODELS_USAGE.md  MAIN_PROGRAM_FIX_REPORT.md  MENU_FEATURES.md  MENU_FEATURES_COMPLETE.md  MENU_FIX_REPORT.md  MENU_SYSTEM_SUMMARY.md  MENU_USAGE_GUIDE.md  PROJECT_ANDROID_UPDATE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_FINAL_COMPLETION.md  PROJECT_FINAL_SHOWCASE.md  PROJECT_FINAL_SUMMARY.md  PROJECT_STAGE3_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PROJECT_UPDATE.md  README.md  UNIT_TEST_SUMMARY.md  USER_GUIDE.md  WINDOW_FIX_REPORT.md  build.bat  build.sh  build.spec  check_environment.py  config.yaml  demo_simple.py  download_models.py  pyproject.toml  requirements.txt  run.bat  run_tests_correct.py  run_unit_tests.py  simple_menu_test.py  test_basic.py  test_comprehensive.py  test_effects.py  test_engine.py  test_menu_functionality.py  (+6 more)
.comate/: plan.md
cache/tutorials/: user_progress.json
config/: license.json
demo_tutorials/: tutorials.json
demo_works/: works.json
demos/: comprehensive_demo.py  comprehensive_showcase.py  feature_demo.py  file_input_demo.py  graphics_demo.py  lighting_demo.py  local_model_demo.py  menu_demo.py  resource_demo.py  simple_showcase.py  stage4_demo.py
docs/: android_development.md  development_guide.md  development_plan.md  ios_development.md  web_development.md  技术栈.md  技术栈概览.md
examples/: simple_demo.py
local_tutorials/: tutorials.json
plugins/example_ai_model/: manifest.json  plugin.py
plugins/example_render_effect/: manifest.json  plugin.py
plugins/my_custom_effect/: manifest.json  plugin.py
src/: main.py
src/ai/: ai_system.py  object_detection.py  object_detection_fixed.py
src/commerce/: licensing.py
src/community/: tutorials.py  work_sharing.py
src/core/: engine.py
src/graphics/: lighting.py  particle_system.py  renderer.py
src/input/: file_input.py  input_handler.py
src/platform/android/: __init__.py  build_config.py  main.py  renderer_adapter.py  touch_input.py
src/platform/ios/: __init__.py  build_config.py  main.py  metal_renderer.py  touch_input.py
src/platform/web/: __init__.py  build_config.py  input_handler.py  main.py  webgl_renderer.py
src/plugins/: plugin_manager.py  plugin_market.py  sdk.py
src/ui/: font_manager.py  gui_system.py  gui_system_backup.py  menu_system.py  native_menu.py  theme.json
src/utils/: config_manager.py  logger.py  performance_monitor.py  resource_manager.py
tests/: run_all_tests.py  test_ai_system.py  test_core_engine.py  test_gui_system.py  test_input_handler.py  test_lighting.py  test_object_detection.py  test_particle_system.py  test_resource_manager.py
