[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-weaver"
version = "1.0.0"
description = "AIGC实景导演 - 基于高通骁龙X Elite的端侧实时混合现实创作系统"
authors = [
    {name = "SceneWeaver Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy>=1.21.0",
    "pygame>=2.1.0",
    "pillow>=8.3.0",
    "tensorflow>=2.8.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "opencv-python>=4.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "psutil>=5.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=21.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910"
]
performance = [
    "numba>=0.55.0",
    "cython>=0.29.0"
]
all = [
    "pytest>=6.2.0",
    "black>=21.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "numba>=0.55.0",
    "cython>=0.29.0"
]

[project.urls]
Homepage = "https://github.com/scene-weaver/scene-weaver"
Documentation = "https://scene-weaver.readthedocs.io"
Repository = "https://github.com/scene-weaver/scene-weaver.git"
Issues = "https://github.com/scene-weaver/scene-weaver/issues"

[project.scripts]
scene-weaver = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scene_weaver = ["assets/*", "config.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | docs
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]